fix css footer i havent seen that on mobile but its fixed now it was grid icon bug because on rotate we flip the whole line...

--- a/css/impressum.css
+++ b/css/impressum.css
@@ -54,7 +54,9 @@ h1 {
 }
 footer {
     text-align: center;
-    padding: 5px;
+    padding: 10px;
+    height: 45px;
+    min-height: fit-content;
     background: rgba(255, 255, 255, 0.9);
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
 }
