--- a/css/kontakt.css
+++ b/css/kontakt.css
@@ -29,6 +29,7 @@ footer {
     bottom: 0;
     width: 100%;
     height: 45px;
+    min-height: fit-content;
     position: fixed;
     align-content: center;
 }
